--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ html, body {
 p {
   margin-top: 60px;
   padding: 60px;
-  font-size: 2em; }
+  font-size: 2em;
+  margin-bottom: 0; }
 
 .white {
   background: #fff;
