--- a/style.scss
+++ b/style.scss
@@ -16,9 +16,7 @@ html, body {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 20;
   clip: rect(auto, auto, auto, auto);
-  pointer-events: none; //nodig voor safari, anders werkte enkel het eerste hamburger menu
 }
 
 .nav {
@@ -37,7 +35,6 @@ html, body {
     pointer-events: all;
     justify-content: space-around;
     align-items: baseline;
-    transform: perspective(0); //https://stackoverflow.com/questions/28488059/safari-rendering-bug-with-css-clip
 
     h1 {
       display: inline-block;
@@ -77,9 +74,17 @@ p {
 .hamburger {
   display: none;
   pointer-events: all;
-  transform: perspective(0); //https://stackoverflow.com/questions/28488059/safari-rendering-bug-with-css-clip
   &:hover {
     cursor: pointer;
+  }
+}
+
+//FIX voor iOS14 en macOS Big Sur
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .nav-clip {
+    clip: auto;
+    -webkit-mask-image: -webkit-linear-gradient(top, #ffffff 0%,#ffffff 100%); //https://stackoverflow.com/questions/28488059/safari-rendering-bug-with-css-clip
   }
 }
 
